feat(agents): route Jev choices to named child agents